<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_landing_page">Welcome to landing page</string>
    <string name="sub_header"><![CDATA[Let’s assume these are not the <h1> on the page. Not that things would be dramatically different if one of them was, but just to set the stage. I find this tends to come up in subsections or cards the most.]]></string>
    <string name="continue_text">Continue</string>
    <string name="instruction">Instruction</string>
    <string name="welcome_text_one">1. Tap the + icon to add a new shoe item to your inventory</string>
    <string name="welcome_text_two">2. Tap the Save Button to save the shoe to your inventory</string>
    <string name="shoe_details_header">Add Shoe Details</string>
    <string name="add_shoe_details">Add Shoe Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="company_name">Company Name</string>
    <string name="enter_size">Enter Size</string>
    <string name="enter_description">Enter Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Enter Password</string>
    <string name="logout_menu_item">Logout</string>
</resources>
