<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.screen.boarding.login.LoginViewModel" />
    </data>

    <!--  used ConstraintLayout because 1.Simple layout.
          2. used layout_constraintBaseline_toBaselineOf so that so both button is together always
           3. top margin is avoided
           -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.boarding.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_login_email"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.278" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_login_email"
            tools:text="this is my password " />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_login"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> loginViewModel.onLoginClicked()}"
            android:text="@string/login"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_login_register"
            app:layout_constraintEnd_toStartOf="@+id/button_login_register"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_register"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> loginViewModel.onRegisterClicked()}"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_login_login"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_login_password"
            app:layout_constraintVertical_bias="0.343" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>